# jawolf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  jawolf.kdev4  test.bas
.kdev4/: jawolf.kdev4
assets/levels/: level.map  one.tmx  text.map
lib/forge/: CMakeLists.txt  README.md  f_math.c  f_matrix_operations.c  f_mem_debug.c  f_sort.c  f_text.c  f_types.c  forge.h
lib/physfs/: CMakeLists.txt
shaders/: cs_simple.glsl
src/: actions.c  actions.h  app.c  app.h  block.c  block.h  block_map.c  block_map.h  buffer.c  buffer.h  collision.c  collision.h  color.h  dbg.h  defs.h  draw.c  draw.h  game.c  game.h  geometry.c  geometry.h  gui.c  gui.h  image_load.c  image_load.h  input.c  input.h  main.c  map.c  map.h  map_dumper.c  map_dumper.h  opengl.c  opengl.h  script.c  script.h  simple.c  simple.h  sprite.c  sprite.h  (+5 more)
src/ext/: _extensions.h  _extensions.inl
